# code-organization-for-larger-graphql-projects

./: README.md  main.py  pyproject.toml
graphql_api/: __init__.py  schema.py
graphql_api/account/: __init__.py  mutation.py  query.py  types.py
graphql_api/checkout/: __init__.py  mutation.py  query.py  types.py
graphql_api/core/: mutations.py  queries.py  schema.py  types.py
graphql_api/order/: __init__.py  mutation.py  query.py  types.py
graphql_api/product/: __init__.py  mutation.py  query.py  types.py
graphql_api/review/: __init__.py  mutation.py  query.py  types.py
graphql_api/shipping/: __init__.py  mutation.py  query.py  types.py
