[tool.poetry]
name = "code-organization-for-larger-graphql-projects"
version = "0.1.0"
description = ""
authors = ["Kirill Netreba"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
strawberry-graphql = "^0.209.7"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
